--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -656,6 +656,15 @@ variations:
     add_deps_recursive:
       mlperf-inference-implementation:
         tags: _cuda
+  rocm:
+    group:
+      device
+    env:
+      CM_MLPERF_DEVICE:
+        rocm
+    add_deps_recursive:
+      mlperf-inference-implementation:
+        tags: _rocm
 
   tpu:
     group:
