Cleanups for rocm support
Former-commit-id: dfca9552bf604c91143ebc51202eb5e4ad6d2728

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -543,6 +543,8 @@ variations:
     add_deps_recursive:
       onnxruntime:
         tags: _rocm
+      inference-src:
+        tags: _ctuning
     env:
       ONNXRUNTIME_PREFERRED_EXECUTION_PROVIDER: "ROCMExecutionProvider"
       CM_MLPERF_BACKEND_VERSION: <<<CM_ONNXRUNTIME_TRAINING_VERSION>>>
