Cleanups for rocm support
Former-commit-id: de7773140be15aa78e034ac33e9268df26c27c50

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -544,7 +544,7 @@ variations:
       onnxruntime:
         tags: _rocm
       inference-src:
-        tags: _ctuning
+        tags: _repo.https://github.com/ctuning/inference
     env:
       ONNXRUNTIME_PREFERRED_EXECUTION_PROVIDER: "ROCMExecutionProvider"
       CM_MLPERF_BACKEND_VERSION: <<<CM_ONNXRUNTIME_TRAINING_VERSION>>>
