Cleanups for rocm support
Former-commit-id: 5c6840805427cd9cdb77346648fee10b664c921e

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -133,6 +133,7 @@ deps:
       - tvm-onnx
       CM_MLPERF_DEVICE:
       - cpu
+      - rocm
 
   ## Onnx CUDA Runtime
   - tags: get,generic-python-lib,_onnxruntime_gpu
