Fix mlperf implementation version for deepsparse

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -610,7 +610,7 @@ variations:
         CM_HOST_PLATFORM_FLAVOR:
         - aarch64
     add_deps_recursive:
-      inference-src:
+      mlperf-implementation:
         version: deepsparse
       ml-model:
         tags: raw,_deepsparse
