Support multi-gpu runs for bert

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -473,6 +473,8 @@ deps:
     names:
     - mlperf-implementation
 
+  - tags: get,generic-python-lib,_package.psutil
+
 posthook_deps: 
   - names:
     - mlperf-runner
