Added stable diffusion initial draft

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -342,6 +342,31 @@ variations:
       - 3d-unet-accuracy-script
       tags: run,accuracy,mlperf,_kits19,_int8
 
+  sdxl:
+    group:
+      model
+    env:
+      CM_MODEL:
+        sdxl
+    add_deps_recursive:
+      mlperf-inference-implementation:
+        tags: _sdxl
+    post_deps:
+    - enable_if_env:
+        CM_MLPERF_LOADGEN_MODE:
+        - accuracy
+        - all
+        CM_MLPERF_ACCURACY_RESULTS_DIR:
+        - 'on'
+      skip_if_env:
+        CM_MLPERF_IMPLEMENTATION:
+        - nvidia-original
+        - reference
+      names:
+      - mlperf-accuracy-script
+      - coco2014-accuracy-script
+      tags: run,accuracy,mlperf,_coco2014
+
   rnnt:
     group:
       model
@@ -702,6 +727,9 @@ variations:
     alias: int8
 
   fp32:
+    alias: float32
+
+  float32:
     group: precision
     default: true
     env:
