--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -335,6 +335,18 @@ deps:
       CM_MLPERF_CUSTOM_MODEL_PATH:
       - "on"
 
+  ## SDXL
+  - tags: get,ml-model,stable-diffusion,text-to-image,sdxl
+    names:
+    - ml-model
+    - sdxl-model
+    enable_if_env:
+      CM_MODEL:
+      - sdxl
+    skip_if_env:
+      CM_MLPERF_CUSTOM_MODEL_PATH:
+      - "on"
+
 
   ## 3d-unet
   - tags: get,ml-model,medical-imaging,3d-unet
@@ -423,6 +435,11 @@ deps:
       - bert-99
       - bert-99.9
 
+  ## COCO for SDXL
+  - tags: get,dataset,coco2014,_validation
+    enable_if_env:
+      CM_MODEL:
+      - sdxl
 
   ## Kits19 for 3d-unet
   - tags: get,dataset,kits19,preprocessed
@@ -734,6 +751,28 @@ variations:
     add_deps_recursive:
       inference-src:
         tags: _deeplearningexamples
+
+  sdxl:
+    group: models
+    env:
+      CM_MODEL: sdxl
+    deps:
+      - tags: get,generic-python-lib,_package.diffusers
+        names:
+          - diffusers
+      - tags: get,generic-python-lib,_package.transformers
+        names:
+          - transformers
+      - tags: get,generic-python-lib,_package.accelerate
+        names:
+          - accelerate
+      - tags: get,generic-python-lib,_package.torchmetrics
+        names:
+          - torchmetrics
+    adr:
+      mlperf-implementation:
+        tags: _repo.https://github.com/pgmpablo157321/inference
+        version: custom
 
   3d-unet-99.9:
     group: models
