--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -381,7 +381,7 @@ deps:
   # Install datasets
 
   ## ImageNet (small for tests)
-  - tags: get,dataset,image-classification,imagenet,preprocessed,_default
+  - tags: get,dataset,image-classification,imagenet,preprocessed
     names:
     - imagenet-preprocessed
     enable_if_env:
