--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -40,6 +40,7 @@ input_mapping:
   max_batchsize: CM_MLPERF_LOADGEN_MAX_BATCHSIZE
   mode: CM_MLPERF_LOADGEN_MODE
   num_threads: CM_NUM_THREADS
+  threads: CM_NUM_THREADS
   dataset: CM_MLPERF_VISION_DATASET_OPTION
   model: CM_MLPERF_CUSTOM_MODEL_PATH
   output_dir: OUTPUT_BASE_DIR
