--- a/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
@@ -110,7 +110,7 @@ deps:
     names:
       - resnet50-model
       - ml-model
-    tags: get,ml-model,resnet50,_fp32,_onnx,_no-argmax
+    tags: get,ml-model,resnet50,_fp32,_onnx,_from-tf
 
 
 
