--- a/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
@@ -457,6 +457,10 @@ variations:
       kilt_device_ids: 0,1,2,3,4,5,6,7
       qaic_queue_length: 6
 
+  dl2q.24xlarge,singlestream:
+    env:
+      kilt_device_ids: 0
+
   dl2q.24xlarge,resnet50,offline:
     base:
       - activation-count.3
