Fix device_ids for SS
Former-commit-id: b057ca4c1f1124ecf0c0874a21d29b1df9d8c3b2

--- a/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
@@ -460,6 +460,8 @@ variations:
   dl2q.24xlarge,singlestream:
     env:
       kilt_device_ids: 0
+    base:
+      - activation-count.1
 
   dl2q.24xlarge,resnet50,offline:
     base:
