Updates for qaic
Former-commit-id: fbc9bd8ae3b08e953f74aa4e9498ae06c8e2601e

--- a/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
@@ -314,6 +314,13 @@ variations:
           - qaic-model-compiler
           - resnet50-compiler
 
+  bert-99,qaic:
+    deps:
+      - tags: compile,qaic,model,_bert-99
+        names:
+          - qaic-model-compiler
+          - bert-99-compiler
+
   retinanet:
     group: model
     env:
