Fixes for bert qaic run

--- a/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-kilt/_cm.yaml
@@ -390,6 +390,7 @@ variations:
     - bert_
     env:
       CM_MODEL: bert-99
+      CM_SQUAD_ACCURACY_DTYPE: float32
       CM_NOT_ML_MODEL_STARTING_WEIGHTS_FILENAME: "https://zenodo.org/record/3750364/files/bert_large_v1_1_fake_quant.onnx"
 
   bert-99.9:
@@ -428,19 +429,31 @@ variations:
     env:
       CM_MLPERF_LOADGEN_SCENARIO: SingleStream
       kilt_model_batch_size: 1
+    adr:
+      qaic-model-compiler:
+        tags: _singlestream
 
   multistream:
     group: loadgen-scenario
     env:
       CM_MLPERF_LOADGEN_SCENARIO: MultiStream
+    adr:
+      qaic-model-compiler:
+        tags: _multistream
   offline:
     group: loadgen-scenario
     env:
       CM_MLPERF_LOADGEN_SCENARIO: Offline
+    adr:
+      qaic-model-compiler:
+        tags: _offline
   server:
     group: loadgen-scenario
     env:
       CM_MLPERF_LOADGEN_SCENARIO: Server
+    adr:
+      qaic-model-compiler:
+        tags: _server
 
   uint8:
     group: precision
@@ -467,15 +480,18 @@ variations:
     base:
       - nsp.14
     env:
-      kilt_device_ids: 0,1,2,3,4,5,6,7
+      kilt_device_ids: "0"
       qaic_queue_length: 6
 
   dl2q.24xlarge,singlestream:
     env:
       kilt_device_ids: 0
-    base:
-      - activation-count.1
+      qaic_activation_count: "1"
 
   dl2q.24xlarge,resnet50,offline:
-    base:
-      - activation-count.3
+    env:
+      qaic_activation_count: "3"
+
+  dl2q.24xlarge,bert-99,offline:
+    env:
+      qaic_activation_count: "14"
