Cleanups for qaic on AWS
Former-commit-id: a0943c30561d895ed6f74064b27d38f5fa7cfbcf

--- a/cm-mlops/script/get-preprocessed-dataset-squad/_cm.yaml
+++ b/cm-mlops/script/get-preprocessed-dataset-squad/_cm.yaml
@@ -18,6 +18,7 @@ deps:
     names:
       - squad-vocab
   - tags: get,generic-python-lib,_package.tokenization
+  - tags: get,generic-python-lib,_package.transformers
 
 docker_input_mapping: {}
 input_description: {}
