--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -62,6 +62,7 @@ input_mapping:
   singlestream_target_latency: CM_MLPERF_LOADGEN_SINGLESTREAM_TARGET_LATENCY
   multistream_target_latency: CM_MLPERF_LOADGEN_MULTISTREAM_TARGET_LATENCY
   network: CM_NETWORK_LOADGEN
+  sut_servers: CM_NETWORK_LOADGEN_SUT_SERVERS
 
 
 # Duplicate CM environment variables to the ones used in native apps
