--- a/cm-mlops/script/reproduce-mlperf-inference-qualcomm/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-qualcomm/_cm.yaml
@@ -160,7 +160,7 @@ deps:
     names:
       - openimages-preprocessed
       - dataset-preprocessed
-    tags: get,dataset,preprocessed,openimages,_for.retinanet,_validation,_full,_custom-annotations
+    tags: get,dataset,preprocessed,openimages,_for.retinanet.onnx,_validation,_full
 
 
 
@@ -328,6 +328,20 @@ variations:
     env:
       CM_MODEL: retinanet
       CM_ML_MODEL_STARTING_WEIGHTS_FILENAME: "https://zenodo.org/record/6617981/files/resnext50_32x4d_fpn.pth"
+      kilt_model_name: retinanet
+      kilt_input_count: 1
+      kilt_model_disable_nms: ''
+      kilt_model_max_detections: 600
+      kilt_output_count: 1
+      kilt_input_format: "FLOAT32,-1,3,800,800"
+      kilt_output_format: "INT64,-1"
+      dataset_imagenet_preprocessed_input_square_side: 224
+      ml_model_image_height: 800
+      ml_model_image_width: 800
+      loadgen_buffer_size: 64
+      loadgen_dataset_size: 24576
+      CM_BENCHMARK: STANDALONE_OBJECT_DETECTION
+
     deps:
     - tags: get,generic-python-lib,_Pillow
     - tags: get,generic-python-lib,_torch
@@ -335,6 +349,20 @@ variations:
     - tags: get,generic-python-lib,_opencv-python
     - tags: get,generic-python-lib,_numpy
     - tags: get,generic-python-lib,_pycocotools
+
+  retinanet,qaic:
+    deps:
+      - tags: compile,qaic,model,_retinanet
+        names:
+          - qaic-model-compiler
+          - retinanet-compiler
+
+  retinanet,qaic,_uint8:
+    env:
+      kilt_device_qaic_skip_stage: 'convert'
+      kilt_input_format: "UINT8,1,3,800,800"
+      kilt_output_format: "INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,4,1000:INT8,14,1000:INT8,1,4,1000:INT8,1,4,1000:INT8,1,4,1000"
+
 
   bert_:
     deps:
