--- a/cm-mlops/script/reproduce-mlperf-inference-qualcomm/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-qualcomm/_cm.yaml
@@ -160,7 +160,7 @@ deps:
     names:
       - openimages-preprocessed
       - dataset-preprocessed
-    tags: get,dataset,preprocessed,openimages,_for.retinanet.onnx,_validation,_full
+    tags: get,dataset,preprocessed,openimages,_for.retinanet.onnx,_NCHW,_validation,_full
 
 
 
@@ -357,7 +357,7 @@ variations:
           - qaic-model-compiler
           - retinanet-compiler
 
-  retinanet,qaic,_uint8:
+  retinanet,qaic,uint8:
     env:
       kilt_device_qaic_skip_stage: 'convert'
       kilt_input_format: "UINT8,1,3,800,800"
@@ -521,10 +521,13 @@ variations:
       CM_QAIC_DEVICES: 0
       qaic_activation_count: "1"
 
-  dl2q.24xlarge,resnet50:
+  dl2q.24xlarge,resnet50,offline:
     env:
       qaic_activation_count: "3"
 
-  dl2q.24xlarge,bert-99:
+  dl2q.24xlarge,bert-99,offline:
+    env:
+      qaic_activation_count: "14"
+  dl2q.24xlarge,retinanet,offline:
     env:
       qaic_activation_count: "14"
